--- a/configure.in
+++ b/configure.in
@@ -161,12 +161,13 @@ elif test "z$with_libxml" = "z" -a "z$PKG_CONFIG_ENABLED" = "zyes" ; then
 	[LIBXML262_FOUND=yes],
 	[LIBXML262_FOUND=no])
 fi
-
+AC_MSG_CHECKING(libxml2 $with_libxml  $LIBXML_FOUND  )
 if test "z$LIBXML_FOUND" = "zno" ; then
     AC_MSG_CHECKING(for libxml2 libraries >= $LIBXML_MIN_VERSION) 
     if test "z$with_libxml" != "z" ; then 
 	LIBXML_CONFIG=$with_libxml/bin/$LIBXML_CONFIG
     fi
+    AC_MSG_CHECKING(libxml2 $with_libxml  $LIBXML_CONFIG  )
     if ! $LIBXML_CONFIG --version > /dev/null 2>&1 ; then
 	AC_MSG_ERROR(Could not find libxml2 anywhere (see config.log for details).)
     fi
